--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width", initial-scale="1.0" />
+    <title>Welcome to Kokoa talk</title>
+    <link rel="stylesheet" href="css/style.css">
+ </head>
+ <body>
+    <div class="status-bar">
+        <div class="status-bar__column">
+            <span>No Service</span>
+            <i class="fa-solid fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
+            <span>18:43</span>
+        </div>
+        <div class="status-bar__column">
+            <i class="fa-solid fa-lock-open"></i>
+            <span class="status-bar__battery">11%</span>
+            <i class="fa-solid fa-battery-low"></i>
+            <i class="fa-solid fa-battery-quarter"></i>
+        </div>
+    </div>
 
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+        <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number</p>
+    </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number" />
+        <input type="password" placeholder="Password" />
+        <input type="submit" value="Log in" />
+        <button type="submit">Sign Up</button>
+        <a href="#">Find Kokoa Account or Password</a>
+    </form>
+    <script src="https://kit.fontawesome.com/178bd1eecc.js" crossorigin="anonymous"></script>
+ </body>
+</html>
